derive-ex-tests/tests/compile_fail/compare_op/ord_field_not_impl_ord.rs
use derive_ex::derive_ex;

#[derive(PartialOrd, Eq, PartialEq)]
struct NotOrd;

#[derive_ex(Ord, PartialOrd, Eq, PartialEq)]
struct X {
    x: NotOrd,
}

fn main() {}
